Movi el archivo app.js a la carpeta js

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="map"></div>
     <p id="pais" class="texto"></p>
     <p id="resultado" class="texto"></p>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
